# Bonzai-V1

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/data/: missing_value_policy.yaml  overture_release.yaml
configs/eval/: emergence_floors.yaml
configs/experiments/: bakeoff-mamba-hybrid-53M.yaml  bakeoff-transformer-ar-53M.yaml
configs/multiregion/: addcities_v1.yaml  batch2_v1.yaml  canary_v1.yaml
configs/sub_f/: boundary_reference_vocab.yaml  encoding_primitives.yaml  semantic_vocab.yaml  stage_1_2_joint.yaml  (+5 more)
docs/: CORPUS_SCALEUP.md  GROUND_TRUTH.md  INDEX.md  LEONARDO_REFERENCE.md  PROJECT_FOCUS.md  PROJECT_OVERVIEW.md  boundary_contracts_v0.md  known_issues.md
reports/: 2026-05-16-phase-1-sub-B1-singapore-frequency-analysis.md  2026-05-23-phase-1-sub-F-close-checklist.md  2026-05-23-phase-1-sub-F-task-1-halt.md  2026-05-23-phase-1-sub-F-task-2-halt.md  2026-05-23-phase-1-sub-F-task-3c-halt.md  2026-05-23-phase-1-sub-F-task-4-halt.md  2026-05-23-phase-1-sub-F-task-5a-halt.md  2026-05-23-phase-1-sub-F-task-6-halt.md  2026-05-23-phase-1-sub-F-task-7-halt.md  2026-05-31-sub-G-T11-coverage-cycle2-nonroad-edge.md  2026-05-31-sub-G-T11-symmetry-root-cause.md  2026-06-01-sub-G-T11-H1-accuracy-metric-root-cause.md  2026-06-01-sub-G-T11-H2-bref-bijection-tolerance.md  2026-06-01-sub-G-T11-H3-ogc-validity-bref-collapse.md  2026-06-03-phase-2-multiregion-crs-pilot.md  2026-06-04-phase-2-g3-canary-rollup.yaml  2026-06-05-batch2-subf-symmetry-fp-investigation.md  2026-06-05-phase-2-g4-corpus-dod.yaml  2026-06-05-subf-v1.2-revalidation-closeout.md  2026-06-06-eval-set-gen-scoping.md  2026-06-06-phase-2-corpus-completion-closeout.md  2026-06-08-coherence-reference.yaml  2026-06-08-phase-2-multiregion-corpus-closeout.md  2026-06-08-usable-n.yaml  2026-06-09-eval-set-gen-execution.md  2026-06-09-phase-2-bakeoff-phases-A-C-local-build.md  2026-06-10-capability-observations.md  2026-06-10-gate-i-conditioning-discrimination-closeout.md  2026-06-10-gate-i-conditioning-discrimination-design.md  2026-06-10-gate-i-conditioning-discrimination-result.yaml  2026-06-10-localization-diagnostic-summary.md  2026-06-10-localization-diagnostic.yaml  2026-06-10-phase-2-bakeoff-task8-leonardo-build.md  2026-06-10-readiness-audit-execution-surface-map.md  2026-06-10-readiness-audit-failure-class-enumeration.md  2026-06-10-task8-multiregion-train-shards-build.yaml  2026-06-11-cell-token-lengths-38cities.yaml  2026-06-11-crs-consistency-42cities.yaml  2026-06-11-readiness-closure-sub-project-close.md  2026-06-11-residual-character-recon.md  (+37 more)
scripts/: _diag_conditioning_factorial.py  _diag_factorial.sbatch  _diag_macro_char_redundancy.py  _diag_perfield.sbatch  _diag_perfield_ablation.py  _dump_real_features.py  _dump_real_features.sbatch  _eyeball_gen_probe.py  _eyeball_gen_probe.sbatch  _eyeball_gen_probe_mamba.sbatch  _eyeball_recap.py  _eyeball_recap.sbatch  _eyeball_render.py  _heldout_cell_count.py  _mamba_geom_check.sbatch  _real_features_to_parquet.py  _real_features_to_parquet.sbatch  _road_connectivity_diag.py  _spot_scan_cell_end.py  analyse_macro_plan_frequencies.py  analyse_singapore_frequencies.py  bakeoff_diagnostic.sbatch  bakeoff_run.sbatch  berlin_chain.sbatch  berlin_extract.sbatch  berlin_pilot.sh  build_lane_s_sampler.py  build_lane_s_sampler.sbatch  build_multiregion_train_shards.py  build_multiregion_train_shards.sbatch  build_shard_cache.py  build_shard_cache_v2.sbatch  cfm_data_invalidate.py  check_crs_consistency.py  ddp_audit_halt_check.py  ddp_resume_check.py  derive_boundary_contracts.py  derive_macro_plan.py  derive_phase1_vocab.py  diag_berlin_tiles.py  (+53 more)
tests/: conftest.py  test_sanity.py  test_viz_build_data.py
viz/: README.md  app.js  build_data.py  data.js  data_mamba.js  index.html  styles.css
(+741 files in other folders)
