[project]
name = "cfm"
version = "0.0.1"
description = "Bonzai-OSM city foundation model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "shapely>=2.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cfm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ANN", "RUF"]
ignore = ["ANN401"]  # Any allowed in geojson dict

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"scripts/**" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "slow: tests slower than 5 seconds",
]
